# CMake

CoordinateGenerator/: CMakeLists.txt  main.cpp
CoordinateGenerator/Components/Common/: CommonTypes.h
CoordinateGenerator/Components/Engine/: CMakeLists.txt
CoordinateGenerator/Components/Engine/implementation/: CoordinateFinder.cpp  FindingCoordinates.cpp
CoordinateGenerator/Components/Engine/interface/: CoordinateFinder.h  FindingCoordinates.h
CoordinateGenerator/Components/InputHandler/: CMakeLists.txt
CoordinateGenerator/Components/InputHandler/implementation/: InputHandler.cpp
CoordinateGenerator/Components/InputHandler/interface/: InputHandler.h
CoordinateGenerator/Components/OutputHandler/: CMakeLists.txt
CoordinateGenerator/Components/OutputHandler/implementation/: OutputHandler.cpp
CoordinateGenerator/Components/OutputHandler/interface/: OutputHandler.h
CoordinateGenerator/Test/: CMakeLists.txt  CoordinateGeneratorTest.cpp
helloworld/: CMakeLists.txt  helloworld.cpp
